# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
authors = ["Michael Nett <mnett82@gmail.com>"]
edition = "2018"
name = "aoc20"
publish = false
version = "0.1.0"

[dependencies]
scan_fmt = "0.2"
tinyset = "0.4"

[[bin]]
name = "p1"
path = "src/p1.rs"

[[bin]]
name = "p2"
path = "src/p2.rs"

[[bin]]
name = "p3"
path = "src/p3.rs"
